@@ -404,7 +404,6 @@ addgrbyX (struct database_dyn *db, int fd, request_header *req,
   char *buffer = (char *) alloca (buflen);
   struct group resultbuf;
   struct group *grp;
-  uid_t oldeuid = 0;
   bool use_malloc = false;
   int errval = 0;
 
@@ -416,11 +415,14 @@ addgrbyX (struct database_dyn *db, int fd, request_header *req,
 	dbg_log (_("Reloading \"%s\" in group cache!"), keystr);
     }
 
+#if 0
+  uid_t oldeuid = 0;
   if (db->secure)
     {
       oldeuid = geteuid ();
       pthread_seteuid_np (uid);
     }
+#endif
 
   while (lookup (req->type, key, &resultbuf, buffer, buflen, &grp) != 0
 	 && (errval = errno) == ERANGE)
@@ -455,8 +457,10 @@ addgrbyX (struct database_dyn *db, int fd, request_header *req,
 	buffer = (char *) extend_alloca (buffer, buflen, buflen + INCR);
     }
 
+#if 0
   if (db->secure)
     pthread_seteuid_np (oldeuid);
+#endif
 
   cache_addgr (db, fd, req, keystr, grp, uid, he, dh, errval);
 
